# colorswatches

./: MANIFEST.in  README.md  example.txt  main.py  pyproject.toml
colorswatches/: swatch_generator.py
tests/: test.py
